k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ds-app-be
  namespace: daily-scrum
spec:
  selector:
    app: ds-app-be
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: ds-app-fe
  namespace: daily-scrum
spec:
  selector:
    app: ds-app-fe
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 80
  type: LoadBalancer
