k8s/ingress.yaml
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: strip-prefix-ds
#   namespace: daily-scrum
# spec:
#   stripPrefix:
#     prefixes:
#       - "/ds"

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ds-app-ingress
  namespace: daily-scrum
  # annotations:
  #       traefik.ingress.kubernetes.io/router.middlewares: daily-scrum-strip-prefix-ds@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - example.ddns.net
      secretName: example.ddns.net
  rules:
    - host: example.ddns.net
      http:
        paths:
          - path: /ds/api
            pathType: Prefix
            backend:
              service:
                name: ds-app-be
                port:
                  number: 3000
          - path: /ds/uploads
            pathType: Prefix
            backend:
              service:
                name: ds-app-be
                port:
                  number: 3000
          - path: /ds/
            pathType: Prefix
            backend:
              service:
                name: ds-app-fe
                port:
                  number: 3001
